test/expected/explain_+o_eq_rck_rk++delete-02.out
struct S; struct T; explain S& S::operator=(T const&) = delete
          ^
11: error: "delete" can be used only for special member functions
